# wga

./: .gitmodules  CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
data/models/: pyramid.txt
data/shaders/: basic_color.wgsl
libs/webgpu/: CMakeLists.txt
src/wga/: callbacks.hpp  model.hpp  setup.hpp  shader_types.hpp  shaders.hpp  type_info.hpp  wga.hpp
src/wga/geometry/: geometry.hpp
